test/kube2e/upgrade/assets/caching/caching_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-test-service
  namespace: gloo-system
spec:
  ports:
    - port: 8000
      name: http
      targetPort: http
  selector:
    app: cache-test-service
